refactor: fix small  issues